crash at play button
while viewing rtsp stream it disconnected
pressed play again while, lots of dying input messages
[0x970e80] main playlist debug: dying input
Program received signal SIGSEGV, Segmentation fault.
[Switching to thread 4276.0x1294]
0x75af0e38 in KERNEL32!CreateJobObjectA ()
from C:\Windows\syswow64\kernel32.dll
(gdb) Error: dll starting at 0x774e0000 not found.
Error: dll starting at 0x75ae0000 not found.
Error: dll starting at 0x774e0000 not found.
Error: dll starting at 0x77410000 not found.
bt
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x75af0e38 in KERNEL32!CreateJobObjectA ()
from C:\Windows\syswow64\kernel32.dll
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x6a5ad0a1 in vlc_mutex_lock (p_mutex=0xffffff64) at misc/threads.c:276
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x6a5bafe6 in __var_Get (p_this=0x0, psz_name=0x81ea0c9 "state",
p_val=0xd36bd70) at misc/variables.c:828
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x079f4255 in InputManager::togglePlayPause (this=0xc01dd20)
at input_manager.cpp:410
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x07ab3193 in ControlsWidget::play (this=0xc01d4d0)
at ./input_manager.hpp:144
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x07ada618 in ControlsWidget::qt_metacall (this=0xc01d4d0,
_c=InvokeMetaMethod, _id=29, _a=0xd36bec8)
at components/controller.moc.cpp:164
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x07ff6baf in QMetaObject::activate () at util/customwidgets.moc.cpp:140
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x07d78513 in QAbstractButton::clicked ()
at util/customwidgets.moc.cpp:140
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x07b8e418 in QAbstractButtonPrivate::emitClicked ()
at util/customwidgets.moc.cpp:140
[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x07b8ff3e in QAbstractButtonPrivate::click ()
at util/customwidgets.moc.cpp:140
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x07b904b9 in QAbstractButton::mouseReleaseEvent ()
at util/customwidgets.moc.cpp:140
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x07b11152 in QWidget::event () at util/customwidgets.moc.cpp:140
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x07b9031d in QAbstractButton::event () at util/customwidgets.moc.cpp:140
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x07b31ce7 in QPushButton::event () at util/customwidgets.moc.cpp:140
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x07ade38e in QApplicationPrivate::notify_helper ()
at util/customwidgets.moc.cpp:140
[#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x07ae1c5d in QApplication::notify () at util/customwidgets.moc.cpp:140
[#16](https://code.videolan.org/videolan/vlc/-/issues/16) 0x07ff9e6e in QCoreApplication::notifyInternal ()
at util/customwidgets.moc.cpp:140
[#17](https://code.videolan.org/videolan/vlc/-/issues/17) 0x07ae7b5d in QApplicationPrivate::sendMouseEvent ()
at util/customwidgets.moc.cpp:140
[#18](https://code.videolan.org/videolan/vlc/-/issues/18) 0x07c88152 in QETWidget::translateMouseEvent ()
at util/customwidgets.moc.cpp:140
[#19](https://code.videolan.org/videolan/vlc/-/issues/19) 0x07c8bec4 in QtWndProc@16 () at util/customwidgets.moc.cpp:140
[#20](https://code.videolan.org/videolan/vlc/-/issues/20) 0x76e98807 in USER32!CreateDialogIndirectParamAorW ()
from C:\Windows\syswow64\user32.dll
[#21](https://code.videolan.org/videolan/vlc/-/issues/21) 0x001d09dc in ?? ()
[#22](https://code.videolan.org/videolan/vlc/-/issues/22) 0x00000202 in ?? ()
[#23](https://code.videolan.org/videolan/vlc/-/issues/23) 0x00000000 in ?? ()