[Qt] Fix crash when pressed play when input is DYYYYYING.

Close #2196